Minor fixes to support Warp Terminal

--- a/dot_zshrc.tmpl
+++ b/dot_zshrc.tmpl
@@ -16,6 +16,14 @@ SPACESHIP_DIR_TRUNC_REPO=false
 SPACESHIP_BATTERY_SHOW=true
 SPACESHIP_BATTERY_THRESHOLD=15
 
+# Compatibility settings for Warp
+SPACESHIP_PROMPT_ASYNC=false
+
+# Remove the prompt character.
+# Warp interprets this as actual prompt content and forces newline after.
+spaceship remove char
+
+
 ###############################################################################
 # Extensions                                                                  #
 ###############################################################################
